--- a/doc/dark/cjd.css
+++ b/doc/dark/cjd.css
@@ -20,6 +20,10 @@ pre.pre { margin-left: 4mm; margin-top: 2mm; margin-bottom: 2mm; color: rgb(255,
 pre.u { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(193,209,255);}
 pre.r { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(255,193,234);}
 .prompt { color: white; }
+
+pre.preblurb { margin-left: 3mm; margin-top: 2pt; margin-bottom: 0; color: rgb(255,255,221);}
+
+
 div.spacer { 
 	margin-top: 8pt; 
 	margin-bottom: 8pt; 
@@ -53,7 +57,7 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 	border-top: thin solid white;
 }
 
-.itemname { text-align: left; font-size: medium; font-weight: bold; }
+.itemname { text-align: left; font-size: medium; font-weight: bold; color: white; }
 
 .itemtype { text-align: right; font-size: medium; }
 
@@ -72,7 +76,7 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 .desc { margin-left: 12mm; }
 
 /* Expression */
-.expr { font-family: courier, monospace; }
+.expr { font-family: monospace; }
 
 /*
 	Sections, where a "section" typically contains a header (e.g., "Arguments")
@@ -107,17 +111,20 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 /* Protocol */
 .proto { text-indent: -6mm; margin-top: 6pt; }
 
-.id { font-family: courier, monospace; font-size: 13px; }
+.id { font-family: monospace; font-size: 13px; }
 
-.n0 { font-family: courier, monospace; font-size: 13px; color: rgb(113, 201, 255); }
-.n1 { font-family: courier, monospace; font-size: 13px; color: rgb(255, 105, 105); }
-.n2 { font-family: courier, monospace; font-size: 13px; color: rgb(0, 255, 0); }
-.n3 { font-family: courier, monospace; font-size: 13px; color: rgb(174, 133, 255); }
-.n4 { font-family: courier, monospace; font-size: 13px; color: orange; }
-.n5 { font-family: courier, monospace; font-size: 13px; color: olive; }
-.n6 { font-family: courier, monospace; font-size: 13px; color: maroon; }
+.n0 { font-family: monospace; font-size: 13px; color: rgb(113, 201, 255); }
+.n1 { font-family: monospace; font-size: 13px; color: rgb(255, 105, 105); }
+.n2 { font-family: monospace; font-size: 13px; color: rgb(0, 255, 0); }
+.n3 { font-family: monospace; font-size: 13px; color: rgb(174, 133, 255); }
+.n4 { font-family: monospace; font-size: 13px; color: orange; }
+.n5 { font-family: monospace; font-size: 13px; color: yellow; }
+.n6 { font-family: monospace; font-size: 13px; color: rgb(255, 83, 255); }
+.n7 { font-family: monospace; font-size: 13px; color: rgb(202, 194, 136); }
+.n8 { font-family: monospace; font-size: 13px; color: rgb(200, 200, 200); }
 
-.fn { font-family: courier, monospace; font-size: 13px; color: cyan; }
+
+.fn { font-family: monospace; font-size: 13px; color: cyan; }
 
 .trailer { margin-top: 6mm; margin-bottom: 3mm; text-align: center; width: 100%; }
 .ending { font-size: 9pt; font-style: italic; }
