--- a/doc/light/cjd.css
+++ b/doc/light/cjd.css
@@ -19,6 +19,9 @@ pre { margin-left: 4mm; margin-top: 2mm; margin-bottom: 2mm; }
 /* pre entries for examples: .u  for user input, .r for REPL output, .prompt for prompt  */
 pre.u { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(128,0,0);}
 pre.r { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(0,0,255);}
+
+pre.preblurb { margin-left: 3mm; margin-top: 2pt; margin-bottom: 0; }
+
 .prompt { color: black; }
 div.spacer { 
 	margin-top: 8pt; 
@@ -54,7 +57,7 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 	border-top: thin solid black;
 }
 
-.itemname { text-align: left; font-size: medium; font-weight: bold; }
+.itemname { text-align: left; font-size: medium; font-weight: bold; color: black; }
 
 .itemtype { text-align: right; font-size: medium; }
 
@@ -73,7 +76,7 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 .desc { margin-left: 12mm; }
 
 /* Expression */
-.expr { font-family: courier, monospace; }
+.expr { font-family: monospace; }
 
 /*
 	Sections, where a "section" typically contains a header (e.g., "Arguments")
@@ -108,17 +111,20 @@ p { margin-top: 3pt; margin-bottom: 3pt;
 /* Protocol */
 .proto { text-indent: -6mm; margin-top: 6pt; }
 
-.id { font-family: courier, monospace; font-size: 13px; }
+.id { font-family: monospace; font-size: 13px; }
 
-.n0 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: rgb(50,50,255); }
-.n1 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: red; }
-.n2 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: rgb(50,150,0); }
-.n3 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: rgb(180,1,199); }
-.n4 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: orange; }
-.n5 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: olive; }
-.n6 { font-weight: bold; font-family: courier, monospace; font-size: 13px; color: maroon; }
+.n0 { font-weight: bold; font-family: monospace; font-size: 13px; color: rgb(50,50,255); }
+.n1 { font-weight: bold; font-family: monospace; font-size: 13px; color: red; }
+.n2 { font-weight: bold; font-family: monospace; font-size: 13px; color: rgb(50,150,0); }
+.n3 { font-weight: bold; font-family: monospace; font-size: 13px; color: rgb(180,1,199); }
+.n4 { font-weight: bold; font-family: monospace; font-size: 13px; color: orange; }
+.n5 { font-weight: bold; font-family: monospace; font-size: 13px; color: olive; }
+.n6 { font-weight: bold; font-family: monospace; font-size: 13px; color: maroon; }
+.n7 { font-weight: bold; font-family: monospace; font-size: 13px; color: teal; }
+.n8 { font-weight: bold; font-family: monospace; font-size: 13px; color: black; }
 
-.fn { font-weight: bold; font-family: courier, monospace; font-size: 13px;
+
+.fn { font-weight: bold; font-family: monospace; font-size: 13px;
 	color: rgb(178,0,208); }
 
 .trailer { margin-top: 6mm; margin-bottom: 3mm; text-align: center; width: 100%; }
